--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   ],
   "main": "src/index.js",
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "video.js": "8.2.1",
-    "videojs-youtube": "3.0.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "video.js": "^8.5.2",
+    "videojs-youtube": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
+    "@babel/runtime": "^7.22.15",
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
